# andliu

./: .gitignore  .gitignore.swp  .gitignore~  README.md
AzureBackup/AzureBackupForLinux/: .project
AzureBackup/ostc.azurebackup/: .project  pom.xml  signedPurchaseOrder.xml
AzureNativeLinuxAgent/: AzureNativeLinuxAgent.vcxproj  Makefile  Makefile.in  config.h  config.h.in  config.status  configure  configure.ac  configure.scan  ovf-env.xml  privkey.pem  ~AutoRecover.AzureNativeLinuxAgent.vcxproj
AzureNativeLinuxAgent/data/: ovf-env-key.xml  waagent_native.conf
AzureNativeLinuxAgent/src/: AbstractDistro.cpp  AbstractDistro.h  AgentConfig.cpp  AgentConfig.h  AzureEnvironment.cpp  AzureEnvironment.h  AzureNativeLinuxAgent.cpp  BlobRoutine.cpp  Certificates.cpp  Certificates.h  CertificationRoutine.cpp  CommandExecuter.cpp  CommandExecuter.h  CommandResult.cpp  CommandResult.h  Deprovisioner.cpp  DeviceRoutine.cpp  DeviceRoutine.h  ExtensionConfig.cpp  ExtensionConfig.h  ExtensionsConfig.cpp  ExtensionsConfig.h  FileFunctions.h  FileOperator.cpp  FileOperator.h  GoalState.cpp  GoalState.h  HandlerManifest.cpp  HandlerManifest.h  Helpers.h  HostingEnvironmentConfig.cpp  HostingEnvironmentConfig.h  HttpResponse.cpp  HttpResponse.h  HttpRoutine.cpp  HttpRoutine.h  JsonRoutine.cpp  JsonRoutine.h  Logger.cpp  Logger.h  (+24 more)
AzureTerminal/: .gitignore  buildAzureTerminal.ps1  deployAzureTerminal.ps1
AzureTerminal/AzureManagementLib/: AzureManagementLib.csproj  AzureVirtualMachine.cs  AzureVirtualMachineUtil.cs  SubscriptionUtil.cs  Token.cs  Token2.cs  TokenUtil.cs  VMUtil.cs  app.config  packages.config
JCTerm/: pom.xml
LimingWebConsole/: pom.xml
OTerm/: .classpath  .gitignore
OTerm2/: pom.xml
OTerm2WebRole/: OTerm2.ccproj  OTerm2.sln  ServiceConfiguration.Cloud.cscfg
ResourceRetension/: RecycleIt.ps1  disknotattached.ps1  disksnotattached.txt  largevms.txt  machineretention.ps1  mediumvms.txt  storageblobnotmodifiedfor30days.txt  storageretention.ps1
TalentGraber/: Local.testsettings  TalentGraberService.sln
TalentGraber2/: .gitignore  .gitignore.swp  README.md  TalentGraberService.sln
TalentGraberV1/: TalentGraber.sln
VMEncryption/: MANIFEST.in  SetAzureDiskEncryptionSplits.ps1  SetAzureDiskEncryptionTest.ps1  VMEncryption.pyproj  create_encrypted_disk.ps1  encrypt_disk.ps1  encrypt_disk_clone.ps1  encrypt_disk_format.ps1  encrypt_disk_inplace.ps1  encrypt_disk_inplace_withoutbek.ps1  keyvault_prepare.ps1  mkstub.py  setup.py  test.py
VMEncryption-0.1/: HandlerManifest.json  VMEncryption.pyproj  attach_key_disk.ps1  create_encrypted_disk.ps1  encrypt_disk.ps1  test.py
WebConsole/: AzureWebConsoleAzureService.sln  WebConsoleAzureService.sln
mindterm_4.1.5/: Makefile  README.txt  RELEASE_NOTES.txt  filesets.xml
vs_CASC_10_21/: BmpProgressEx.cpp  BmpProgressEx.h  BmpProgressEx_1.cpp  BmpProgressEx_1.h  BmpProgressEx_2.cpp  BmpProgressEx_2.h  CASC_05.clw  CASC_05.cpp  CASC_05.dsp  CASC_05.dsw  CASC_05.h  CASC_05.idl  CASC_05.rc  CASC_05.rgs  CASC_05.sln  CASC_05.vcproj  CASC_05.vcxproj  CASC_05.vcxproj.filters  CASC_05Dlg.cpp  CASC_05Dlg.h  Casc_011_jog.cpp  Casc_011_jog.h  Casc_01_jog.cpp  Casc_01_jog.h  Casc_021_auto.cpp  Casc_021_auto.h  Casc_02_auto.cpp  Casc_02_auto.h  Casc_03_recipe.cpp  Casc_03_recipe.h  Casc_041_sys_mech.cpp  Casc_041_sys_mech.h  Casc_042_sys_process.cpp  Casc_042_sys_process.h  Casc_043_sys_soft.cpp  Casc_043_sys_soft.h  Casc_04_sys.cpp  Casc_04_sys.h  Casc_061_aux_auto_axis.cpp  Casc_061_aux_auto_axis.h  (+36 more)
(+1460 files in other folders)
